--- a/trunk/TurtleEscape/TurtleEscape/TurtleEscape/Index.htm
+++ b/trunk/TurtleEscape/TurtleEscape/TurtleEscape/Index.htm
@@ -4,8 +4,12 @@
     <title></title>
 </head>
 <body>
-    <canvas>
-    
-    </canvas>
+    <canvas id="globalCanvas"></canvas>
 </body>
+    <script>
+    
+    </script>
+
+<!--<script src="Scripts/constants.js" language="javascript" type="text/javascript"></script>
+<script src="Scripts/animations.js" language="javascript" type="text/javascript"></script>-->
 </html>
