--- a/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/jsplatformer12.html
+++ b/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/jsplatformer12.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="AnimatedGameObject.js"></script>
 	<script type="text/javascript" src="MainMenu.js"></script>
     <script type="text/javascript" src="Player.js"></script>
+    <script type="text/javascript" src="Lava.js"></script>    
     <script type="text/javascript" src="LevelEndPost.js"></script>
     <script type="text/javascript" src="Powerup.js"></script>
     <script type="text/javascript" src="Level.js"></script>
@@ -35,5 +36,6 @@
     </canvas>
     <div>Current Score </div>
     <div id="Score">0</div>
+	<div id="debug"></div>	
 </body>
 </html>
