--- a/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/jsplatformer12.html
+++ b/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/jsplatformer12.html
@@ -3,6 +3,9 @@
 <head>
     <title>JavaScript Platformer 12</title>
 	<script type="text/javascript" src="prototype-1.6.0.3.js"></script>
+	<script type="text/javascript" src="HelperFunctions.js"></script>
+	<script type="text/javascript" src="KeySwitchHandler.js"></script>
+	
     <script type="text/javascript" src="ResourceManager.js"></script>
     <script type="text/javascript" src="Rectangle.js"></script>
     <script type="text/javascript" src="GameObject.js"></script>
