--- a/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/jsplatformer12.html
+++ b/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/jsplatformer12.html
@@ -17,7 +17,8 @@
     <script type="text/javascript" src="Lava.js"></script>    
     <script type="text/javascript" src="LevelEndPost.js"></script>
     <script type="text/javascript" src="Powerup.js"></script>
-    <script type="text/javascript" src="Wall.js"></script>    
+    <script type="text/javascript" src="Wall.js"></script>
+    <script type="text/javascript" src="scoreObject.js"></script>
     <script type="text/javascript" src="Level.js"></script>
     <script type="text/javascript" src="Utils.js"></script>
     <script type="text/javascript" src="ApplicationManager.js"></script>    
