--- a/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/jsplatformer12.html
+++ b/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/jsplatformer12.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="AnimatedGameObject.js"></script>
 	<script type="text/javascript" src="MainMenu.js"></script>
     <script type="text/javascript" src="Player.js"></script>
-    <script type="text/javascript" src="Lava.js"></script>    
+    <script type="text/javascript" src="Magma.js"></script>
     <script type="text/javascript" src="LevelEndPost.js"></script>
     <script type="text/javascript" src="Powerup.js"></script>
     <script type="text/javascript" src="Wall.js"></script>
