--- a/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/jsplatformer12.html
+++ b/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/jsplatformer12.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="Powerup.js"></script>
     <script type="text/javascript" src="Wall.js"></script>
     <script type="text/javascript" src="scoreObject.js"></script>
+	<script type="text/javascript" src="SpeedMeter.js"></script>
     <script type="text/javascript" src="Level.js"></script>
     <script type="text/javascript" src="Utils.js"></script>
     <script type="text/javascript" src="ApplicationManager.js"></script>    
