--- a/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
+++ b/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
@@ -2,30 +2,29 @@
 <html lang="en">
 <head>
     <title>JavaScript Platformer 12</title>
-	<script type="text/javascript" src="prototype-1.6.0.3.js"></script>
-	    <script type="text/javascript" src="KeySwitchHandler.js"></script>
-		    <script type="text/javascript" src="HelperFunctions.js"></script>
-			
-    <script type="text/javascript" src="ResourceManager.js"></script>
-    <script type="text/javascript" src="SoundManager.js"></script>
-    <script type="text/javascript" src="Rectangle.js"></script>
-    <script type="text/javascript" src="GameObject.js"></script>
-	<script type="text/javascript" src="VisualGameObject.js"></script>
-	<script type="text/javascript" src="RepeatingGameObject.js"></script>
-    <script type="text/javascript" src="AnimatedGameObject.js"></script>
-	<script type="text/javascript" src="MainMenu.js"></script>
-    <script type="text/javascript" src="Player.js"></script>
-    <script type="text/javascript" src="Magmas.js"></script>
-    <script type="text/javascript" src="LevelEndPost.js"></script>
-    <script type="text/javascript" src="Powerup.js"></script>
-    <script type="text/javascript" src="Wall.js"></script>
-    <script type="text/javascript" src="scoreObject.js"></script>
-	<script type="text/javascript" src="SpeedMeter.js"></script>
-    <script type="text/javascript" src="Level.js"></script>
-    <script type="text/javascript" src="Utils.js"></script>
-    <script type="text/javascript" src="ApplicationManager.js"></script>    
-    <script type="text/javascript" src="GameObjectManager.js"></script>
-    <script type="text/javascript" src="Main.js"></script>
+	<script type="text/javascript" src="Script/prototype-1.6.0.3.js"></script>
+	<script type="text/javascript" src="Script/KeySwitchHandler.js"></script>
+	<script type="text/javascript" src="Script/HelperFunctions.js"></script>
+    <script type="text/javascript" src="Script/ResourceManager.js"></script>
+    <script type="text/javascript" src="Script/SoundManager.js"></script>
+    <script type="text/javascript" src="Script/Rectangle.js"></script>
+    <script type="text/javascript" src="Script/GameObject.js"></script>
+	<script type="text/javascript" src="Script/VisualGameObject.js"></script>
+	<script type="text/javascript" src="Script/RepeatingGameObject.js"></script>
+    <script type="text/javascript" src="Script/AnimatedGameObject.js"></script>
+	<script type="text/javascript" src="Script/MainMenu.js"></script>
+    <script type="text/javascript" src="Script/Player.js"></script>
+    <script type="text/javascript" src="Script/Magmas.js"></script>
+    <script type="text/javascript" src="Script/LevelEndPost.js"></script>
+    <script type="text/javascript" src="Script/Powerup.js"></script>
+    <script type="text/javascript" src="Script/Wall.js"></script>
+    <script type="text/javascript" src="Script/scoreObject.js"></script>
+	<script type="text/javascript" src="Script/SpeedMeter.js"></script>
+    <script type="text/javascript" src="Script/Level.js"></script>
+    <script type="text/javascript" src="Script/Utils.js"></script>
+    <script type="text/javascript" src="Script/ApplicationManager.js"></script>    
+    <script type="text/javascript" src="Script/GameObjectManager.js"></script>
+    <script type="text/javascript" src="Script/Main.js"></script>
 	<style type="text/css">
 		body { font-family: Arial,Helvetica,sans-serif;}
 	</style>
