--- a/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
+++ b/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" src="Script/RepeatingGameObject.js"></script>
     <script type="text/javascript" src="Script/AnimatedGameObject.js"></script>
 	<script type="text/javascript" src="Script/MainMenu.js"></script>
+    <script type="text/javascript" src="Script/HurryUpSign.js"></script>
     <script type="text/javascript" src="Script/Player.js"></script>
     <script type="text/javascript" src="Script/Magmas.js"></script>
     <script type="text/javascript" src="Script/LevelEndPost.js"></script>
@@ -25,6 +26,7 @@
     <script type="text/javascript" src="Script/ApplicationManager.js"></script>    
     <script type="text/javascript" src="Script/GameObjectManager.js"></script>
     <script type="text/javascript" src="Script/Main.js"></script>
+    <script type="text/javascript" src="Script/GameOverMenu.js"></script>
 	<style type="text/css">
 		body { font-family: Arial,Helvetica,sans-serif;}
 	</style>
