--- a/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
+++ b/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
@@ -18,6 +18,8 @@
     <script type="text/javascript" src="Script/Magmas.js"></script>
     <script type="text/javascript" src="Script/LevelEndPost.js"></script>
     <script type="text/javascript" src="Script/KeyHelpingDraw.js"></script>
+    <script type="text/javascript" src="Script/Rabbit.js"></script>
+    <script type="text/javascript" src="Script/Bird.js"></script>
     <script type="text/javascript" src="Script/Wall.js"></script>
     <script type="text/javascript" src="Script/scoreObject.js"></script>
 	<script type="text/javascript" src="Script/SpeedMeter.js"></script>
