--- a/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
+++ b/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
@@ -29,6 +29,8 @@
     <script type="text/javascript" src="Script/GameObjectManager.js"></script>
     <script type="text/javascript" src="Script/Main.js"></script>
     <script type="text/javascript" src="Script/GameOverMenu.js"></script>
+    <script type="text/javascript" src="Script/AchievementManager.js"></script>
+    <script type="text/javascript" src="Script/Achievement.js"></script>
 	<style type="text/css">
 		body { font-family: Arial,Helvetica,sans-serif;}
 	</style>
