--- a/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
+++ b/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="Script/LevelEndPost.js"></script>
     <script type="text/javascript" src="Script/KeyHelpingDraw.js"></script>
     <script type="text/javascript" src="Script/Rabbit.js"></script>
+    <script type="text/javascript" src="Script/OldGuy.js"></script>
     <script type="text/javascript" src="Script/Bird.js"></script>
     <script type="text/javascript" src="Script/Wall.js"></script>
     <script type="text/javascript" src="Script/scoreObject.js"></script>
