--- a/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
+++ b/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
@@ -33,16 +33,25 @@
     <script type="text/javascript" src="Script/AchievementManager.js"></script>
     <script type="text/javascript" src="Script/Achievement.js"></script>
 	<style type="text/css">
-		body { font-family: Arial,Helvetica,sans-serif;}
+		body  
+		{
+			font-family: Arial,Helvetica,sans-serif;
+			margin: 0px 0px 0px 0px;
+		}
 	</style>
 </head>
 <body>
-    <div style="width:100%; text-align:center">
-        <canvas id="canvas" width="600" height="400" onmouseover="">
-            <p>
-                Your browser does not support the canvas element.
-            </p>
-        </canvas>
+    <div style="width:100%; text-align:center;">
+        <div style="width:1024px; height:768px; background-image: url('Image/mainBackground.png');
+            display: block;
+            margin-left: auto;
+            margin-right: auto;">
+            <canvas id="canvas" width="600" height="400" onmouseover="">
+                <p>
+                    Your browser does not support the canvas element.
+                </p>
+            </canvas>
+        </div>
     </div>
 	<div id="debug"></div>	
 </body>
