--- a/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
+++ b/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
@@ -51,6 +51,13 @@
                     Your browser does not support the canvas element.
                 </p>
             </canvas>
+            <div>
+                <img src="Image/forrestL.png" style="height:96px" />
+                <img src="Image/hotchickenL.png" style="height:96px"/>
+                <img src="Image/woodenFingersL.png" style="height:96px"/>
+                <img src="Image/silverFingerL.png" style="height:96px"/>
+                <img src="Image/goldFingerL.png" style="height:96px"/>
+            </div>
         </div>
     </div>
 	<div id="debug"></div>	
