--- a/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
+++ b/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
@@ -51,12 +51,12 @@
                     Your browser does not support the canvas element.
                 </p>
             </canvas>
-            <div>
-                <img src="Image/forrestL.png" style="height:96px" />
-                <img src="Image/hotchickenL.png" style="height:96px"/>
-                <img src="Image/woodenFingersL.png" style="height:96px"/>
-                <img src="Image/silverFingerL.png" style="height:96px"/>
-                <img src="Image/goldFingerL.png" style="height:96px"/>
+            <div style="position: absolute; top: 10px">
+                <img height="96" width="200" src="Image/forrestL.png"/><br />
+                <img height="96" width="200" src="Image/hotchickenL.png"/><br />
+                <img height="96" width="200" src="Image/woodenFingersL.png"/><br />
+                <img height="96" width="200" src="Image/silverFingerL.png"/><br />
+                <img height="96" width="200" src="Image/goldFingerL.png"/><br />
             </div>
         </div>
     </div>
