--- a/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
+++ b/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
@@ -52,6 +52,7 @@
                 </p>
             </canvas>
             <div style="position: absolute; top: 10px">
+                <img height="96" width="200" src="Image/freezerL.png"/><br />
                 <img height="96" width="200" src="Image/forrestL.png"/><br />
                 <img height="96" width="200" src="Image/hotchickenL.png"/><br />
                 <img height="96" width="200" src="Image/woodenFingersL.png"/><br />
