--- a/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
+++ b/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
@@ -51,14 +51,14 @@
                     Your browser does not support the canvas element.
                 </p>
             </canvas>
-            <div style="position: absolute; top: 10px">
+            <!--<div style="position: absolute; top: 10px">
                 <img height="96" width="200" src="Image/freezerL.png"/><br />
                 <img height="96" width="200" src="Image/forrestL.png"/><br />
                 <img height="96" width="200" src="Image/hotchickenL.png"/><br />
                 <img height="96" width="200" src="Image/woodenFingersL.png"/><br />
                 <img height="96" width="200" src="Image/silverFingerL.png"/><br />
                 <img height="96" width="200" src="Image/goldFingerL.png"/><br />
-            </div>
+            </div>-->
         </div>
     </div>
 	<div id="debug"></div>	
