--- a/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
+++ b/trunk/TurtleEscape/TurtleEscape/TurtleEscape/TestCode/TestGameBueno/NuevoRepo/index.html
@@ -51,6 +51,7 @@
                     Your browser does not support the canvas element.
                 </p>
             </canvas>
+			<div style="position: absolute; top: 10px" id="debug"></div>
             <!--<div style="position: absolute; top: 10px">
                 <img height="96" width="200" src="Image/freezerL.png"/><br />
                 <img height="96" width="200" src="Image/forrestL.png"/><br />
@@ -61,6 +62,6 @@
             </div>-->
         </div>
     </div>
-	<div id="debug"></div>	
+		
 </body>
 </html>
